Bug 163730 - Hang after copy text
Summary: Hang after copy text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.2.1 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.4 target:24...
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-02 05:44 UTC by Rachmiel Langer
Modified: 2024-11-11 18:15 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rachmiel Langer 2024-11-02 05:44:05 UTC
Description:
In LibreOffice 24.8.2: Select (Hebrew) text in LO Writer (usually using mouse), Ctrl-C or menu option to copy text; paste text into anther program (specifically: "Master Aramaic Translator" - but specifics shouldn't matter to LO); return focus to LO and program hangs, showing spinner. Only option is to end program, which displays "program is not responding." Then start up again & recover file. Issue recurred for every attempted copy; in my use, every few keystrokes. Reverted to 24.8.1 same problem. Had to revert to 24.2.7 no such issue.

Steps to Reproduce:
1. Select text in LibreOffice Writer
2. Ctrl-C or menu: copy
3. Paste in another program
4, Return focus to LibreOffice; program is hung

Actual Results:
Program is hung. Only recourse is to end program ("program not responding"), restart it & recover file being edited.

Expected Results:
LO Writer should continue functioning unaffected by copying text elsewhere (as 24.2.7 does).


Reproducible: Always


User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: StartModule
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 Mike Kaganski 2024-11-02 06:25:04 UTC
It is very likely specific to some configuration (clipboard monitors present on your system, similar to how bug 148647 could be reproduced with some apps, like "MP3Studio YouTube Downloader" (however strange it may look), were checking the clipboard, and not releasing it). It may even be related to the fix of that bug - I seem to see the "hang on copy" Windows-reports only lately.

It therefore may need a hard work finding the specific situation allowing to reproduce this (like identifying the program / system setting / whatever else, needed to see it).

Another potentially helping thing could be producing a minidump of the hung program, and explained here:
https://wiki.documentfoundation.org/How_to_get_a_backtrace_with_WinDbg#Producing_a_mini_dump
Comment 2 Mike Kaganski 2024-11-02 06:32:44 UTC
(In reply to Rachmiel Langer from comment #0)
> In LibreOffice 24.8.2: Select (Hebrew) text in LO Writer (usually using
> mouse), Ctrl-C or menu option to copy text; paste text into anther program
> (specifically: "Master Aramaic Translator" - but specifics shouldn't matter
> to LO)

By the way: what I wrote in comment 1 means, that it *might* matter what you use. And regardless of your idea that it would be easily reproducible, it would still be helpful, if you attached a specific file with a random text, that you tested yourself and know for a matter of fact, that it does hang on your system; also, the *full* information from LibreOffice's Help->About; and also, what is "Master Aramaic Translator" and where to find it - an Internet search for this exact term in duckduckgo didn't bring results.
Comment 3 Rachmiel Langer 2024-11-02 07:58:53 UTC
Thanks for comment.

Under the latest release it occurs with crippling consistency on my system. But, I assumed it would be difficult to trace. (That's why I mentioned the specific program I'm copying to.)

Master Aramaic Translator is a specific Windows program: https://jewishsoftware.com/download-new-master-aramaic-english-text-translator

When I can I'll reinstall the latest release and try to contrive minimal repeatable circumstances to replicate the bug and clarify context (e.g. trying to paste to other destinations, etc.), and I'll try to do the minidump. As of now, I have deadlines to meet for which I rely on LibreOffice, which is why I had to revert to earlier release.

For now, at least I figured I'd report the issue since it makes the current release unusable.
Comment 4 Mike Kaganski 2024-11-02 19:27:38 UTC
Suddenly, today I caught a clipboard-related hang on my development build. I could debug it, and created https://gerrit.libreoffice.org/c/core/+/175956. I don't know if what I saw was the same as what you described here; neither was I able later to reproduce the hang - neither with, nor without the patch. So this is largely untested, and maybe something different.

However, I ask you to test the daily builds, after the patch gets merged. Thanks!
Comment 5 Commit Notification 2024-11-02 22:39:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9f53d40fd19b22fe1bdbf64e8ce751cf53f4f517

Related: tdf#163730 Avoid deadlock

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-11-03 19:00:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3015db08c9a8a1b29af1018044955c905c9015aa

Related: tdf#163730 Avoid potential deadlock

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-11-06 05:22:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e1beaf844f5d6fdb0a72cdd70f2bbe29b699fe46

Related: tdf#163730 Release the object in separate thread

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-11-06 20:02:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/27f6dd7f3b39f0af513e6034b441918cc6f5afc7

Related: tdf#163730 Avoid deadlock

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-11-06 20:02:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/637583b9f94fe6f7005bda7f3a8c489bec7b3a61

Related: tdf#163730 Avoid potential deadlock

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-11-06 20:03:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/beca57700d04ff549c83a844a05ec6dbf73311e0

Related: tdf#163730 Release the object in separate thread

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Rachmiel Langer 2024-11-06 20:50:17 UTC
Tested 24.8.4 - issue not fixed.

I was able to copy/paste elsewhere a phrase OK, but second attempt to do a copy hung as before. After ending program & restarting (recovering document) failed again on first copy attempt (repeatedly).
Comment 12 Commit Notification 2024-11-08 10:51:04 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-3":

https://git.libreoffice.org/core/commit/1b79853658327dea6a151e19be9f3b149d9139ad

Related: tdf#163730 Avoid deadlock

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2024-11-08 10:51:07 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-3":

https://git.libreoffice.org/core/commit/a2d1fea2dc38ffee565ce99caf8fdeaa19caffbf

Related: tdf#163730 Avoid potential deadlock

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2024-11-08 10:52:09 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-3":

https://git.libreoffice.org/core/commit/29da5e292302c232a5e6f3ec9c2768aaeaa2edd5

Related: tdf#163730 Release the object in separate thread

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Mike Kaganski 2024-11-08 11:10:06 UTC
(In reply to Rachmiel Langer from comment #11)
> Tested 24.8.4 - issue not fixed.

But you have tested on 2024-11-06 20:50:17 UTC - i.e., 50 minutes after the notification about the merged patch to that branch! The dailies (built once daily at midnight UTC) could not contain these changes.
Comment 16 Rachmiel Langer 2024-11-10 21:49:20 UTC
Seems to be fixed! A little confused about target - I couldn't find 24.8.3 so tried 24.8.4 (24-Nov-09 2:53) and preliminary tests seem to be positive. I've tried the same copy steps on multiple occasions - repeated use in  a session & multiple sessions - and the problem hasn't recurred. Thanks!
Comment 17 Mike Kaganski 2024-11-11 05:38:21 UTC
(In reply to Rachmiel Langer from comment #16)
> Seems to be fixed!

Thanks for testing!

> A little confused about target - I couldn't find 24.8.3

It is not built as a daily. But it is already available as a pre-release on the main download page (the pre-releases section is at the very bottom of it); the "24.8.3" item there is, as of today, the 24.8.3.2 (which can be checked, if you click that item, and on the next page, check the "Info" link).
Comment 18 steve 2024-11-11 18:15:02 UTC
verified as per comment #16